<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- The Basics -->
  <groupId>jinahya.io</groupId>
  <artifactId>bitio</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jinahya.util</groupId>
      <artifactId>modified-utf-8</artifactId>
      <version>1.0</version>
    </dependency>
  </dependencies>
  <!--parent/-->
  <!--dependencyManagement/-->
  <!--modules/-->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <!-- Build Setting -->
  <build>
    <extensions>
      <extension>
        <groupId>org.jvnet.wagon-svn</groupId>
        <artifactId>wagon-svn</artifactId>
        <version>1.9</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <executions>
          <execution>
            <id>java-1.3-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <source>1.3</source>
              <!--target>${maven.compiler.target}</target-->
              <target>1.1</target>
            </configuration>
          </execution>
          <execution>
            <id>java-1.6-compile</id>
            <phase>process-test-sources</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <configuration>
              <source>1.6</source>
              <target>1.6</target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!--forkMode>always</forkMode--> 
          <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <!--plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <classifier>${maven.jar.classifier}</classifier>
        </configuration>
      </plugin-->
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <links>
            <link>http://java.sun.com/j2se/1.3/docs/api/</link>
          </links>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <useFile>false</useFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <linkXref>true</linkXref>
          <targetJdk>1.3</targetJdk>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.4</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>2.3.1</version>
      </plugin>
    </plugins>
  </reporting>

  <name>bitio</name>
  <description>Library for bit level I/O</description>
  <url>http://jinahya.googlecode.com/svn/maven/2/site/${groupId}/${artifactId}/index.html</url>
  <inceptionYear>2008</inceptionYear>
  <licenses>
    <license>
      <name>Apache 2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>manual</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>
  <!--
  <organization>
    <name>Jinahya</name>
    <url>http://www.jinahya.com</url>
  </organization>
  -->
  <developers>
    <developer>
      <id>jinahya</id>
      <name>Jin Kwon</name>
      <email>jinahya@gmail.com</email>
      <roles>
        <role>everything</role>
      </roles>
      <timezone>+9</timezone>
      <properties>
      </properties>
    </developer>
  </developers>
  <contributors>
  </contributors>

  <!--issueManagement/-->
  <!--ciManagement/-->
  <!--mailingLists/-->
  <scm>
    <connection>scm:svn:http://jinahya.googlecode.com/svn/maven/2/proj/${groupId}/${artifactId}/trunk/</connection>
    <developerConnection>scm:svn:https://jinahya.googlecode.com/svn/maven/2/proj/${groupId}/${artifactId}/trunk/</developerConnection>
    <tag>HEAD</tag>
    <url>http://jinahya.googlecode.com/svn/maven/2/proj/jinahya.io/bitio/trunk/</url>
  </scm>
  <!--prerequisites/-->
  <!--repositories/-->
  <!--pluginRepositories/-->
  <distributionManagement>
    <site>
      <id>jinahya_googlecode</id>
      <url>svn:https://jinahya.googlecode.com/svn/maven/2/site/${groupId}/${artifactId}/</url>
    </site>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>jinahya_googlecode</id>
      <url>svn:https://jinahya.googlecode.com/svn/maven/2/repo</url>
    </repository>
  </distributionManagement>
  <!--profiles>
    <profile>
      <id>jdk11</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <maven.compiler.target>1.1</maven.compiler.target>
        <maven.jar.classifier>jdk11</maven.jar.classifier>
      </properties>
    </profile>
    <profile>
      <id>jdk12</id>
      <properties>
        <maven.compiler.target>1.2</maven.compiler.target>
        <maven.jar.classifier>jdk12</maven.jar.classifier>
      </properties>
    </profile>
    <profile>
      <id>jdk13</id>
      <properties>
        <maven.compiler.target>1.3</maven.compiler.target>
        <maven.jar.classifier>jdk13</maven.jar.classifier>
      </properties>
    </profile>
    <profile>
      <id>jdk14</id>
      <properties>
        <maven.compiler.target>1.4</maven.compiler.target>
        <maven.jar.classifier>jdk14</maven.jar.classifier>
      </properties>
    </profile>
  </profiles-->
</project>
